선택한 강의 삭제, 선택한 강사 삭제 기능 구현 강의 조회 반환값 수정